Add module dependancies

--- a/auther.cabal
+++ b/auther.cabal
@@ -58,10 +58,15 @@ executable auther
   
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.9 && <4.10
+                     , bytestring
+                     , cryptonite
+                     , dataenc
+                     , binary
+                     , memory
+                     , clock
   
   -- Directories containing source files.
   hs-source-dirs:      src
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
-  
