Secret passed on CLI

--- a/auther.cabal
+++ b/auther.cabal
@@ -66,6 +66,7 @@ executable auther
                      , clock
                      , array
                      , vector
+                     , unix
   
   -- Directories containing source files.
   hs-source-dirs:      src
