--- a/auther.cabal
+++ b/auther.cabal
@@ -78,11 +78,20 @@ test-suite hspec
     hs-source-dirs:   test
     main-is:          AutherSpec.hs
     type:             exitcode-stdio-1.0
---
+
 library
-  hs-source-dirs:      src
- --only adding Internal for tests. TODO find proper way!
-  exposed-modules:     Base32Decode, Base32Decode.Internal
-  build-depends:       base >=4.9 && <4.10
-                     , base, bytestring, word8
-  default-language:    Haskell2010
+    hs-source-dirs:      src
+    --only adding Internal for tests. TODO find proper way!
+    exposed-modules:     Auther.Internal
+    build-depends:     base >=4.9 && <4.10
+                     , bytestring
+                     , word8
+                     , cryptonite
+                     , dataenc
+                     , binary
+                     , memory
+                     , clock
+                     , array
+                     , vector
+                     , unix
+    default-language:    Haskell2010
