--- a/auther.cabal
+++ b/auther.cabal
@@ -73,7 +73,7 @@ executable auther
 
 -- husk.cabal
 test-suite hspec
-    build-depends:    hspec, base, bytestring, word8, auther
+    build-depends:    hspec, base, bytestring, word8, auther, binary, bytestring-conversion
     default-language: Haskell2010
     hs-source-dirs:   test
     main-is:          AutherSpec.hs
