--- a/auther.cabal
+++ b/auther.cabal
@@ -64,6 +64,7 @@ executable auther
                      , vector
                      , unix
                      , word8
+                     , bytestring-conversion
   
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -73,7 +74,7 @@ executable auther
 
 -- husk.cabal
 test-suite hspec
-    build-depends:    hspec, base, bytestring, word8, auther, binary, bytestring-conversion
+    build-depends:    hspec, base, bytestring, word8, auther, binary, bytestring-conversion, clock
     default-language: Haskell2010
     hs-source-dirs:   test
     main-is:          AutherSpec.hs
@@ -94,4 +95,5 @@ library
                      , array
                      , vector
                      , unix
+                     , bytestring-conversion
     default-language:    Haskell2010
