--- a/auther.cabal
+++ b/auther.cabal
@@ -74,7 +74,7 @@ executable auther
 
 -- husk.cabal
 test-suite hspec
-    build-depends:    hspec, base, bytestring, word8, auther, binary, bytestring-conversion, clock
+    build-depends:    hspec, base, bytestring, word8, auther, binary, bytestring-conversion, clock, dataenc
     default-language: Haskell2010
     hs-source-dirs:   test
     main-is:          AutherSpec.hs
