--- a/auther.cabal
+++ b/auther.cabal
@@ -8,11 +8,8 @@ build-type:          Simple
 cabal-version:       >=1.10
 executable auther
   main-is:             Auther.hs
-  --other-modules:       Base32Decode
+  other-modules:       Auther.Internal
   
-  -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:    
-
   build-depends:       base
                      , bytestring
                      , cryptonite
@@ -31,25 +28,25 @@ executable auther
   default-language:    Haskell2010
 
 test-suite hspec
-    build-depends:    hspec, base, bytestring, word8, auther, binary, bytestring-conversion, clock, dataenc
-    default-language: Haskell2010
-    hs-source-dirs:   test
-    main-is:          AutherSpec.hs
-    type:             exitcode-stdio-1.0
+  build-depends:    hspec, base, bytestring, word8, auther, binary, bytestring-conversion, clock, dataenc
+  default-language: Haskell2010
+  hs-source-dirs:   test
+  main-is:          AutherSpec.hs
+  type:             exitcode-stdio-1.0
 
 library
-    hs-source-dirs:      src
-    exposed-modules:     Auther.Internal
-    build-depends:     base
-                     , bytestring
-                     , word8
-                     , cryptonite
-                     , dataenc
-                     , binary
-                     , memory
-                     , clock
-                     , array
-                     , vector
-                     , unix
-                     , bytestring-conversion
-    default-language:    Haskell2010
+  hs-source-dirs:    src
+  exposed-modules:   Auther.Internal
+  build-depends:     base
+                   , bytestring
+                   , word8
+                   , cryptonite
+                   , dataenc
+                   , binary
+                   , memory
+                   , clock
+                   , array
+                   , vector
+                   , unix
+                   , bytestring-conversion
+  default-language:    Haskell2010
