--- a/auther.cabal
+++ b/auther.cabal
@@ -7,13 +7,13 @@ maintainer:          dlagos@formbay.com.au
 build-type:          Simple
 cabal-version:       >=1.10
 executable auther
-  main-is:             Auther.hs
-  other-modules:       Auther.Internal
+  main-is:           Auther.hs
+  other-modules:     Auther.Internal
   
   build-depends:       base
                      , bytestring
+                     , base32-bytestring
                      , cryptonite
-                     , dataenc
                      , binary
                      , memory
                      , clock
@@ -28,25 +28,33 @@ executable auther
   default-language:    Haskell2010
 
 test-suite hspec
-  build-depends:    hspec, base, bytestring, word8, auther, binary, bytestring-conversion, clock, dataenc
-  default-language: Haskell2010
-  hs-source-dirs:   test
-  main-is:          AutherSpec.hs
-  type:             exitcode-stdio-1.0
+  build-depends:       hspec
+                     , base
+                     , bytestring
+                     , base32-bytestring
+                     , word8
+                     , auther
+                     , binary
+                     , bytestring-conversion
+                     , clock
+  default-language:  Haskell2010
+  hs-source-dirs:    test
+  main-is:           AutherSpec.hs
+  type:              exitcode-stdio-1.0
 
 library
-  hs-source-dirs:    src
-  exposed-modules:   Auther.Internal
-  build-depends:     base
-                   , bytestring
-                   , word8
-                   , cryptonite
-                   , dataenc
-                   , binary
-                   , memory
-                   , clock
-                   , array
-                   , vector
-                   , unix
-                   , bytestring-conversion
+  hs-source-dirs:      src
+  exposed-modules:     Auther.Internal
+  build-depends:       base
+                     , bytestring
+                     , base32-bytestring
+                     , word8
+                     , cryptonite
+                     , binary
+                     , memory
+                     , clock
+                     , array
+                     , vector
+                     , unix
+                     , bytestring-conversion
   default-language:    Haskell2010
