--- a/auther.cabal
+++ b/auther.cabal
@@ -32,6 +32,7 @@ test-suite hspec
                      , base
                      , bytestring
                      , base32-bytestring
+                     , memory
                      , word8
                      , auther
                      , binary
